      + this also gets rid of an ugly (and broken) workaround

  * PURGEORPHANS: remove --noauth option; it doesn't make sense here

  * REMOVEORPHANS: add --yes option, for consistency with PURGEORPHANS

  * replace internal function with a more thorough stdlib shutil.which()
    for checking if a particular executable exists;
    this bumps minimum Python dependency to 3.3

 -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Sun, 26 May 2013 13:24:32 +0200

wajig (2.7.3) unstable; urgency=low

  * NEWUPGRADES: a bug introduced in 2.5 made this subcommand illegal;
    Closes: #681309
  * STATUSSEARCH: same case as above

 -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Thu, 12 Jul 2012 12:11:46 +0200

wajig (2.7.2) unstable; urgency=low

  * For some reason, some temp/build files ended up in the source package :(
    Thanks to RM, Adam D. Barratt, for noticing.

 -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Tue, 03 Jul 2012 21:03:25 +0200

wajig (2.7.1) unstable; urgency=low

  * NEW, NEWDESCRIBE: fix an exception that occurs if package exists only
    for configured foreign architectures; Closes: #679969
  * DESCRIBE: if package does not exist for native architecture, check if it
    does for configured foreign ones before giving up; this is closely
    related to the above-mentioned fix
  * Specify a minimum dpkg version (1.16.2), due to the use of
    --print-foreign-architectures option introduced as a result of the
    above-mentioned fixes

 -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Mon, 02 Jul 2012 21:04:43 +0200

wajig (2.7) unstable; urgency=low

  * NEW, DETAILNEW, and DESCRIBENEW:
    - make them do as the commands imply; Closes: #670687
    - do not quit if a package is not found in APT cache; Closes: #667068

 -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Tue, 19 Jun 2012 04:31:23 +0200

wajig (2.6.1) unstable; urgency=low

  * DISTUPGRADE: fix an exception triggered by specifying the --dist option
